package com.deencord.exception;

public class InvalidKnowledgeException extends AppException {
    public InvalidKnowledgeException (String message) {
        super(message);
    }
}
