package com.deencord.exception;

public class KeywordSearchException extends AppException {
    public KeywordSearchException(String message) {
        super(message);
    }
}
