package com.deencord.exception;

public class UserOperationException extends AppException {
    public UserOperationException (String message) {
        super(message);
    }
}