package com.deencord.iterator;

import com.deencord.model.KnowledgeComponent;

import java.util.Iterator;

public interface KnowledgeIterator extends Iterator<KnowledgeComponent> {
}
